2008-06-30  Vincent Untz  <vuntz@gnome.org>

	s/string_empty/PANEL_GLIB_STR_EMPTY/

	* libpanel-util/Makefile.am: updated
	* libpanel-util/panel-glib.h: add new file, with only the
	PANEL_GLIB_STR_EMPTY macro right now...
	* panel-util.h: remove string_empty

	* launcher.c: (setup_button):
	* panel-addto.c: (panel_addto_make_text),
	(panel_addto_name_change):
	* panel-menu-items.c: (panel_menu_items_append_from_desktop):
	* panel-properties-dialog.c:
	(panel_properties_dialog_setup_image_chooser),
	(panel_properties_dialog_update_background_image):
	* panel-util.c: (panel_util_get_file_display_for_common_files),
	(panel_util_set_tooltip_text):
	* panel.c: (drop_url): actuall do the
	s/string_empty/PANEL_GLIB_STR_EMPTY/

2008-06-27  Luca Ferretti  <elle.uca@libero.it>

	* panel-icon-names.h: Use non-legacy icon "system-shutdown" from
	fd.o naming spec instead "gnome-shutdown". The icon is yet available
	in gnome-icon-theme.

==================== 2.23.4 ====================

2008-06-17  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/panel-power-manager.h:
	* libpanel-util/panel-session-manager.[ch]: fix distcheck.Again.

2008-06-17  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/panel-power-manager.c: fix distcheck

2008-06-06  Rodney Dawes  <dobey@gnome.org>

	* panel-icon-names.h:
	Use system-log-out instead of gnome-logout
	Use image-missing instead of gnome-unknown

2008-06-06  Vincent Untz  <vuntz@gnome.org>

	Use the gnome-session DBus API to log out/shut down. The dialog is also
	displayed by gnome-session.
	Fix bug #507391

	* Makefile.am: remove files
	* panel-gdm.[ch]: killed, not used anymore
	* panel-logout.[ch]: killed, not used anymore
	* panel-session.[ch]: remove panel_session_request_logout()
	* libpanel-util/Makefile.am: add new files
	* libpanel-util/panel-session-manager.[ch]: new, object to interact
	with the session manager
	* panel-action-button.c: (panel_action_logout): use PanelSessionManager
	API
	(panel_action_shutdown): ditto